apep_0038/v1/REPLICATION.md
# Replication Package: apep_0051

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `analysis_data.csv`
- `event_study_results.csv`
- `policy_dates.csv`

## Code

**Scripts (run in order):**
- (No scripts found)

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   ```

2. Run the data fetching script(s):
   ```bash
   cd data/
   python fetch_*.py  # Downloads data from Census API
   ```

3. Run the analysis script(s):
   ```bash
   python analyze_*.py  # Runs regressions, generates results
   ```

4. Generate figures:
   ```bash
   python create_figures.py  # If present
   ```

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
